force-app/main/default/objects/Services_Needed__c/fields/UCO_Container_Delivered__c.field-meta.xml
<CustomField>
    <fullName>UCO_Container_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container Delivered</label>
    <type>Checkbox</type>
</CustomField>