force-app/main/default/objects/Services_Needed__c/fields/UCO_COV_Sent__c.field-meta.xml
<CustomField>
    <fullName>UCO_COV_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COV Sent</label>
    <type>Checkbox</type>
</CustomField>