force-app/main/default/objects/Services_Needed__c/fields/UCO_No_Of_Gallons_Per_Fryer__c.field-meta.xml
<CustomField>
    <fullName>UCO_No_Of_Gallons_Per_Fryer__c</fullName>
    <label>No. Of Gallons Per Fryer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>