force-app/main/default/objects/Services_Needed__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Capture Volume for all services</description>
    <inlineHelpText>GRD/HYD/UCO service Size</inlineHelpText>
    <label>Volume / Capacity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>