force-app/main/default/objects/Services_Needed__c/recordTypes/Grease_Trap.recordType-meta.xml
<RecordType>
    <fullName>Grease_Trap</fullName>
    <active>true</active>
    <description>Grease Trap or Brown Grease</description>
    <label>Grease Trap</label>
</RecordType>