force-app/main/default/objects/Services_Needed__c/recordTypes/Interceptor.recordType-meta.xml
<RecordType>
    <fullName>Interceptor</fullName>
    <active>true</active>
    <description>Interceptor</description>
    <label>Interceptor</label>
</RecordType>