force-app/main/default/objects/Services_Needed__c/recordTypes/Used_Cooking_Oil.recordType-meta.xml
<RecordType>
    <fullName>Used_Cooking_Oil</fullName>
    <active>true</active>
    <description>Used Cooking Oil or Yellow Grease</description>
    <label>Used Cooking Oil</label>
</RecordType>