force-app/main/default/objects/Services_Needed__c/validationRules/Lock_Audit_Stamp_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Audit_Stamp_Fields</fullName>
    <active>true</active>
    <description>Prevents manual editing of the audit fields. They can only be updated simultaneously when the Status field changes.</description>
    <errorConditionFormula>OR(
    AND(
        OR(ISCHANGED(Ready_To_Service_By__c), ISCHANGED(Ready_To_Service_Date__c)),
        NOT(ISCHANGED(Status__c))
    ),
    AND(
        OR(ISCHANGED(Serviceable_By__c), ISCHANGED(Serviceable_Date__c)),
        NOT(ISCHANGED(Status__c))
    )
)</errorConditionFormula>
    <errorMessage>Audit stamp fields are strictly system-automated and cannot be manually edited.</errorMessage>
</ValidationRule>