force-app/main/default/objects/Services_Needed__c/validationRules/Lock_Serviceable_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Serviceable_Status</fullName>
    <active>true</active>
    <description>Prevents users from changing the status back and forth once it has been marked as Serviceable.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Serviceable&quot;)
)</errorConditionFormula>
    <errorMessage>This record has already been marked as &apos;Serviceable&apos; and Work Orders have been generated. The status cannot be changed or reverted.</errorMessage>
</ValidationRule>