force-app/main/default/objects/Services_Needed__c/validationRules/SetPOFalseForUCO.validationRule-meta.xml
<ValidationRule>
    <fullName>SetPOFalseForUCO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;UCO&quot;,
    Has_PO__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Has_PO__c</errorDisplayField>
    <errorMessage>Has PO must be unchecked for UCO Service Needed records.</errorMessage>
</ValidationRule>