force-app/main/default/objects/Services_Needed__c/validationRules/Validate_DoorKeyandCode_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_DoorKeyandCode_Integer</fullName>
    <active>false</active>
    <description>Door Key and Code should contain only numbers</description>
    <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(Door_Key__c )),
        NOT(REGEX(Door_Key__c , &quot;^[0-9]+$&quot;))
    ),
    AND(
        NOT(ISBLANK(Door_Code__c )),
        NOT(REGEX(Door_Code__c , &quot;^[0-9]+$&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Please ensure the Door Key Fields contain only Numbers.</errorMessage>
</ValidationRule>