force-app/main/default/objects/Services_Needed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>HazTrack_Sensor_ID__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Order_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Rate__c</columns>
    <columns>Primary_Time_Window_From__c</columns>
    <columns>Primary_Time_Window_To__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>Allowed_Days__c</columns>
    <columns>Container_Delivered_Date__c</columns>
    <columns>Communication_Preference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Grease_Trap</value>
    </filters>
    <label>All</label>
</ListView>