force-app/main/default/objects/Services_Needed__c/listViews/bulk_edit.listView-meta.xml
<ListView>
    <fullName>bulk_edit</fullName>
    <columns>Due_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Skills__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Rate__c</columns>
    <columns>Volume__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Duration_In_Mins__c</columns>
    <columns>NAME</columns>
    <columns>Primary_Time_Window_From__c</columns>
    <columns>Primary_Time_Window_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Grease_Trap</value>
    </filters>
    <label>Bulk Edit</label>
</ListView>