force-app/main/default/objects/Services_Needed__c/listViews/BulkActionOnUsedCookingOil.listView-meta.xml
<ListView>
    <fullName>BulkActionOnUsedCookingOil</fullName>
    <columns>Account__c</columns>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Primary_Time_Window_From__c</columns>
    <columns>Primary_Time_Window_To__c</columns>
    <columns>Allowed_Days__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Container_Size1__c</columns>
    <columns>Container_Size2__c</columns>
    <columns>Door_Key__c</columns>
    <columns>Door_Code__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>Monthly_Gallons__c</columns>
    <columns>Service_Notes__c</columns>
    <columns>Recurring__c</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Used_Cooking_Oil</value>
    </filters>
    <label>UCO Account Management 3.7</label>
</ListView>