force-app/main/default/objects/Services_Needed__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>Account__c</columns>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Volume__c</columns>
    <columns>Last_Completed__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Service_Date__c</columns>
    <columns>BGT_Control_Authority__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Has_PO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Grease_Trap</value>
    </filters>
    <label>Bulk Edit GT</label>
</ListView>