force-app/main/default/objects/Services_Needed__c/listViews/Copy_of_UCO_SERVICES_NEED.listView-meta.xml
<ListView>
    <fullName>Copy_of_UCO_SERVICES_NEED</fullName>
    <columns>Account__c</columns>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Monthly_Gallons__c</columns>
    <columns>Volume__c</columns>
    <columns>HazTrack_Sensor_ID__c</columns>
    <columns>Last_Completed__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Container_Size1__c</columns>
    <columns>Container_Size2__c</columns>
    <columns>Container_Size3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Used_Cooking_Oil</value>
    </filters>
    <label>UCO SERVICES NEED (Lowell)</label>
</ListView>