force-app/main/default/objects/Services_Needed__c/listViews/GT_Bulk_Edit.listView-meta.xml
<ListView>
    <fullName>GT_Bulk_Edit</fullName>
    <columns>Account__c</columns>
    <columns>Last_Completed__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>Door_Code__c</columns>
    <columns>Door_Key__c</columns>
    <columns>Service_Notes__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Skills__c</columns>
    <columns>Primary_Time_Window_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Grease_Trap,Services_Needed__c.Interceptor</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>4/25/2026</value>
    </filters>
    <filters>
        <field>Last_Completed__c</field>
        <operation>lessOrEqual</operation>
        <value>3/15/2026</value>
    </filters>
    <label>GT Bulk Edit</label>
</ListView>