force-app/main/default/objects/Services_Needed__c/listViews/HYD_Bulk_Edit.listView-meta.xml
<ListView>
    <fullName>HYD_Bulk_Edit</fullName>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Account__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Volume__c</columns>
    <columns>Duration_In_Mins__c</columns>
    <columns>HYD_Did_You_Ask__c</columns>
    <columns>Rate__c</columns>
    <columns>Skills__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Priority__c</columns>
    <columns>Communication_Preference__c</columns>
    <columns>Notification_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Drain_Cleaning</value>
    </filters>
    <label>HYD Bulk Edit</label>
</ListView>