force-app/main/default/objects/Services_Needed__c/listViews/hyd_services_need.listView-meta.xml
<ListView>
    <fullName>hyd_services_need</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Drain_Cleaning</value>
    </filters>
    <label>Bulk Edit HYD</label>
</ListView>