force-app/main/default/objects/Services_Needed__c/listViews/INT_Bulk_Edit.listView-meta.xml
<ListView>
    <fullName>INT_Bulk_Edit</fullName>
    <columns>Services_Needed_Number_Display__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Interceptor</value>
    </filters>
    <label>INT Bulk Edit</label>
</ListView>