force-app/main/default/objects/Services_Needed__c/listViews/int_services_need.listView-meta.xml
<ListView>
    <fullName>int_services_need</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Skills__c</columns>
    <columns>Volume__c</columns>
    <columns>Duration_In_Mins__c</columns>
    <columns>Rate__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>GRD_Location_Name__c</columns>
    <columns>GRD_Serial_Number__c</columns>
    <columns>Service_Notes__c</columns>
    <columns>Door_Code__c</columns>
    <columns>Door_Key__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Needed__c.Interceptor</value>
    </filters>
    <label>Bulk Edit INT</label>
</ListView>