force-app/main/default/objects/Services_Needed__c/listViews/Routing.listView-meta.xml
<ListView>
    <fullName>Routing</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Last_Completed__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>GRD_Location_Name__c</columns>
    <columns>Rate__c</columns>
    <columns>Vehicle_Features__c</columns>
    <filterScope>Everything</filterScope>
    <label>Routing</label>
</ListView>